# imessage-mcp

./: .gitignore  README.md  pyproject.toml  server.py  setup.sh
.github/workflows/: gitleaks.yml
